Sign-up & Log-in

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ python-dotenv = "*"
 whitenoise = "*"
 gunicorn = "*"
 dj-database-url = "*"
+django-allauth = "*"
+requests = "*"
+pyjwt = "*"
+cryptography = "*"
 
 [dev-packages]
 
